Save directory were CVS file was read to a disk file `refactor: Update file paths, settings, and controllers`